--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -1,7 +1,7 @@
 <div class="row padding-bottom">
-  <div class="col-md-8 divider-right"><input class="form-control" type="text" placeholder="Suche..."
+  <div class="col-sm-8 col-md-8 divider-right"><input class="form-control" type="text" placeholder="Suche..."
                                              (keyup)="filterStarList()" #searchFilter></div>
-  <div class="col-md-4">
+  <div class="col-sm-4 col-md-4">
     <div class="btn-group btn-block" dropdown>
       <button mdbBtn type="button" color="indigo" class="dropdown-toggle" id="button-basic" dropdownToggle
               mdbWavesEffect>
