--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
 <div class="row">
-  <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
-    <p class="vertical-center glow">Als Gast entdecken</p>
+  <div *ngIf="!auth.isLoggedIn(); else elseBlock">
+    <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
+      <p class="vertical-center glow">Als Gast entdecken</p>
+    </div>
+    <div class="col-sm-12 col-md-6 text-center full-height gray-filter" id="user-access" routerLink="/signin">
+      <p class="vertical-center glow">Anmelden/Registrien</p>
+    </div>
   </div>
-  <div class="col-sm-12 col-md-6 text-center full-height gray-filter" id="user-access" routerLink="/signin">
-    <p class="vertical-center glow">Anmelden/Registrien</p>
-  </div>
+  <ng-template #elseBlock>
+    <div class="col full-height text-center">Hallo, {{auth.getUserDetails().name!</div>
+  </ng-template>
 </div>
 <a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
    class="btn btn-info btn-circle absolute-position" tooltip="Zum Code dieser Seite"><span
