modified the div dispayed for logged in users

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,6 +18,10 @@
   filter: grayscale(0%);
 }
 
+#logged-user {
+  background-image: url("../../assets/astronaut.jpg");
+}
+
 .vertical-center {
   margin: 0;
   position: absolute;
