added background picture to the div which will be displayed for logged in users

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,7 +19,9 @@
 }
 
 #logged-user {
-  background-image: url("../../assets/astronaut.jpg");
+  background-image: url("../../assets/planet.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .vertical-center {
