--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,8 @@
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="col full-height text-center vertical-center" id="logged-user">Hallo, {{auth.getUserDetails().name}}!</div>
+    <div class="col full-height text-center vertical-center" id="logged-user">
+      <h1 id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1></div>
   </ng-template>
 </div>
 <a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
