--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,6 +24,11 @@
   background-position: center;
 }
 
+#welcome-text {
+  color: rgba(255,255,255,0.5);
+  text-transform: uppercase;
+}
+
 .vertical-center {
   margin: 0;
   position: absolute;
