--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,7 +19,7 @@
 }
 
 #logged-user {
-  background-image: url("../../assets/planet.jpg");
+  background-image: url("../../assets/space.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
