--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,10 +13,7 @@
     </div>
   </ng-template>
 </div>
-<button mdbBtn type="button" color="primary" rounded="true" mdbWavesEffect>Primary</button>
-<a mdbBtn class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>Indigo</a>
-<!--
-<a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
-   class="btn btn-info btn-circle absolute-position" tooltip="Zum Code dieser Seite"><span
-  class="fa fa-question"></span></a>
--->
+<a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
+   class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
+  <mdb-icon fas icon="question" class="text-white"></mdb-icon>
+</a>
