--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="bg">
+    <div class="bg full-height">
       <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
     </div>
   </ng-template>
