--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,12 @@
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="bg full-height">
+    <div class="bg full-height zoom">
       <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
     </div>
   </ng-template>
+  <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
+     class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
+    <mdb-icon fas icon="question" class="text-white"></mdb-icon>
+  </a>
 </div>
-<a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
-   class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
-  <mdb-icon fas icon="question" class="text-white"></mdb-icon>
-</a>
