zoom on background fix

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="bg full-height zoom">
+    <div class="col bg full-height zoom">
       <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
     </div>
   </ng-template>
