--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -25,8 +25,8 @@
       </tbody>
     </table>
   </div>
+  <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/planets"
+     class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
+    <mdb-icon fas icon="question" class="text-white"></mdb-icon></a>
 </div>
-<a role="button" href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/planets"
-   class="btn btn-info btn-circle absolute-position"><span class="fa fa-question"
-                                                           tooltip="Zum Code dieser Seite"></span></a>
 
