--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -22,6 +22,9 @@
   <div class="col-md-8 fixed-height-col">
     <router-outlet></router-outlet>
   </div>
+  <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/stars"
+     class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
+    <mdb-icon fas icon="question" class="text-white"></mdb-icon></a>
 </div>
 
 
