--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div *ngIf="auth.isLoggedIn()">
-    <div class="col full-height bg">
+    <div class="col full-height text-center">
       <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
     </div>
   </div>
