--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="!auth.isLoggedIn()">
+  <div>
     <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
       <p class="vertical-center glow">Als Gast entdecken</p>
     </div>
@@ -7,13 +7,11 @@
       <p class="vertical-center glow">Anmelden/Registrien</p>
     </div>
   </div>
-  <div *ngIf="auth.isLoggedIn()">
-    <div class="col text-center full-height">
-      <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
-    </div>
-  </div>
+  <!--<ng-template #elseBlock><div class="col text-center full-height">
+    <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
+  </div></ng-template>
   <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
      class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
     <mdb-icon fas icon="question" class="text-white"></mdb-icon>
-  </a>
+  </a>-->
 </div>
