--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -1,4 +1,4 @@
-<div class="row margin-top">
+<div class="row limited-height">
   <div class="col-md-12">
     <table class="table table-bordered table-striped table-hover">
       <thead>
