--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="!auth.isLoggedIn()">
+  <div *ngIf="!auth.isLoggedIn(); else elseBlock">
     <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
       <p class="vertical-center glow">Als Gast entdecken</p>
     </div>
@@ -7,10 +7,11 @@
       <p class="vertical-center glow">Anmelden/Registrien</p>
     </div>
   </div>
-  <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
-     class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
-    <mdb-icon fas icon="question" class="text-white"></mdb-icon>
-  </a>
+  <ng-template #elseBlock>
+    <div class="col-md-12 full-height text-center">
+
+    </div>
+  </ng-template>
   <!--<div>
     <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
       <p class="vertical-center glow">Als Gast entdecken</p>
@@ -27,3 +28,7 @@
     <mdb-icon fas icon="question" class="text-white"></mdb-icon>
   </a>&ndash;&gt;-->
 </div>
+<a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
+   class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
+  <mdb-icon fas icon="question" class="text-white"></mdb-icon>
+</a>
