--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="!status">
   <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
     <p class="vertical-center glow">Als Gast entdecken</p>
   </div>
@@ -20,6 +20,9 @@
      class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
     <mdb-icon fas icon="question" class="text-white"></mdb-icon>
   </a>&ndash;&gt;-->
+</div>
+<div class="row" *ngIf="status">
+  <div class="col full-height text-center"></div>
 </div>
 <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
    class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
