--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,24 +5,11 @@
   <div class="col-sm-12 col-md-6 text-center full-height gray-filter" id="user-access" routerLink="/signin">
     <p class="vertical-center glow">Anmelden/Registrien</p>
   </div>
-  <!--<div>
-    <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
-      <p class="vertical-center glow">Als Gast entdecken</p>
-    </div>
-    <div class="col-sm-12 col-md-6 text-center full-height gray-filter" id="user-access" routerLink="/signin">
-      <p class="vertical-center glow">Anmelden/Registrien</p>
-    </div>
-  </div>
-  &lt;!&ndash;<ng-template #elseBlock><div class="col text-center full-height">
-    <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
-  </div></ng-template>
-  <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
-     class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
-    <mdb-icon fas icon="question" class="text-white"></mdb-icon>
-  </a>&ndash;&gt;-->
 </div>
 <div class="row" *ngIf="status">
-  <div class="col full-height text-center"></div>
+  <div class="col full-height text-center bg">
+    <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
+  </div>
 </div>
 <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
    class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
