--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="!status">
+<div class="row" *ngIf="!status; else elseBlock">
   <div class="col-sm-12 col-md-6  text-center full-height gray-filter" id="guest-access" routerLink="/stars">
     <p class="vertical-center glow">Als Gast entdecken</p>
   </div>
@@ -6,11 +6,13 @@
     <p class="vertical-center glow">Anmelden/Registrien</p>
   </div>
 </div>
-<div class="row" *ngIf="status">
-  <div class="col full-height text-center bg">
-    <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
+<ng-template #elseBlock>
+  <div class="row">
+    <div class="col-md-12 full-height text-center">
+      <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
+    </div>
   </div>
-</div>
+</ng-template>
 <a mdbBtn href="https://github.com/valentinprotiuc/stars-and-planets/tree/master/src/app/home"
    class="btn-circle absolute-position" type="button" color="indigo" mdbWavesEffect>
   <mdb-icon fas icon="question" class="text-white"></mdb-icon>
