--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <ng-template #elseBlock>
   <div class="row">
     <div class="col-md-12 full-height text-center">
-      <h1 class="vertical-center" id="welcome-text">Hallo, {{auth.getUserDetails().name}}!</h1>
+      <h1 class="vertical-center" id="welcome-text">Hallo, {{name}}!</h1>
     </div>
   </div>
 </ng-template>
