--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,10 +10,10 @@
   <div class="row">
     <div class="col-md-12 full-height text-center bg text-white">
       <div class="vertical-center" >
-        <h1 id="welcome-text">Hallo, {{name}}!</h1>
+        <h1 class="wow fadeIn welcome-text" data-wow-delay="0.5s" data-wow-duration="1.5s">Hallo, {{name}}!</h1>
         <hr>
-        <div routerLink="/stars"><mdb-icon fas icon="chevron-left"></mdb-icon><h3>Sterne bewundern</h3></div>
-        <div routerLink="/planets"><h3>Planeten entdecken</h3><mdb-icon fas icon="chevron-right"></mdb-icon></div>
+        <div class="welcome-text" routerLink="/stars"><mdb-icon fas icon="chevron-left"></mdb-icon><h4>Sterne bewundern</h4></div>
+        <div class="welcome-text" routerLink="/planets"><h4>Planeten entdecken</h4><mdb-icon fas icon="chevron-right"></mdb-icon></div>
       </div>
     </div>
   </div>
