--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,7 +25,7 @@
   background-size: cover;
 }
 
-#welcome-text {
+.welcome-text {
   color: rgba(255,255,255,0.5);
   text-transform: uppercase;
 }
