--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,9 @@
   <div class="row">
     <div class="col-md-12 full-height text-center bg text-white">
       <div class="vertical-center">
-        <h1 class="wow fadeIn welcome-text" data-wow-delay="0.5s" data-wow-duration="1.5s">Hallo, {{name}}!</h1>
+        <h1 class="wow fadeIn welcome-text" data-wow-delay="1s" data-wow-duration="1.5s">Hallo, {{name}}!</h1>
         <hr>
-        <div class="row">
+        <div class="row wow fadeIn" data-wow-delay="1.5s" data-wow-duration="1.5s">
           <div class="col welcome-text" routerLink="/stars">
             <h4>
               <mdb-icon fas icon="chevron-left"></mdb-icon>
