--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,13 +13,13 @@
         <h1 class="wow fadeIn welcome-text" data-wow-delay="1.5s" data-wow-duration="2s">Hallo, {{name}}!</h1>
         <hr>
         <div class="row wow fadeIn" data-wow-delay="2s" data-wow-duration="2s">
-          <div class="col welcome-text cursor-pointer" routerLink="/stars">
+          <div class="col d-block welcome-text cursor-pointer" routerLink="/stars">
             <h5>
               <mdb-icon fas icon="chevron-left"></mdb-icon>
               Sterne bewundern
             </h5>
           </div>
-          <div class="col welcome-text cursor-pointer" routerLink="/planets">
+          <div class="col d-block welcome-text cursor-pointer" routerLink="/planets">
             <h5>Planeten entdecken
               <mdb-icon fas icon="chevron-right"></mdb-icon>
             </h5>
