--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,8 +1,22 @@
 <div class="row justify-content-md-center justify-content-sm-center">
   <div class="col-sm-6 col-md-4 vertical-center ">
-    <h3>Mein Profil</h3>
-    <hr>
-    <p><span class="font-weight-bold">Name: </span>{{ details?.name }}</p>
-    <p><span class="font-weight-bold">E-Mail-Adresse: </span>{{ details?.email }}</p>
+    <mdb-card>
+      <div class="view rgba-white-slight waves-light" mdbWavesEffect>
+        <mdb-card-img src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+                      alt="Card image cap"></mdb-card-img>
+        <a>
+          <div class="mask"></div>
+        </a>
+      </div>
+      <mdb-card-body>
+        <mdb-card-title>
+          <h4>Mein Profil</h4>
+        </mdb-card-title>
+        <mdb-card-text>
+          <p><span class="font-weight-bold">Name: </span>{{ details?.name }}</p>
+          <p><span class="font-weight-bold">E-Mail-Adresse: </span>{{ details?.email }}</p>
+        </mdb-card-text>
+      </mdb-card-body>
+    </mdb-card>
   </div>
 </div>
