--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-6 col-md-4 vertical-center ">
     <mdb-card>
       <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-        <mdb-card-img src="https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg"
+        <mdb-card-img src="https://images.unsplash.com/photo-1494022299300-899b96e49893?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                       alt="Card image cap"></mdb-card-img>
         <a>
           <div class="mask"></div>
