--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,10 +12,13 @@
         <mdb-card-title>
           <h4>Mein Profil</h4>
         </mdb-card-title>
+        <hr>
         <mdb-card-text>
           <p><span class="font-weight-bold">Name: </span>{{ details?.name }}</p>
           <p><span class="font-weight-bold">E-Mail-Adresse: </span>{{ details?.email }}</p>
         </mdb-card-text>
+        <hr>
+        <button mdbBtn type="button" color="indigo" mdbWavesEffect (click)="logout()">Abmelden</button>
       </mdb-card-body>
     </mdb-card>
   </div>
