--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-sm-6 col-md-4">
-    <mdb-card class="vertical-center">
+  <div class="col-sm-6 col-md-4 vertical-center ">
+    <mdb-card>
       <div class="view rgba-white-slight waves-light" mdbWavesEffect>
         <mdb-card-img src="../../assets/profile.jpg"
                       alt="Card image cap"></mdb-card-img>
