--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,14 +14,13 @@
         <hr>
         <div class="row wow fadeIn" data-wow-delay="2s" data-wow-duration="2s">
           <div class="d-flex flex-row">
-            <div class="welcome-text cursor-pointer" routerLink="/stars">
+            <div class="welcome-text cursor-pointer right-padding" routerLink="/stars">
               <h5>
                 <mdb-icon fas icon="chevron-left"></mdb-icon>
                 Sterne bewundern
               </h5>
             </div>
-            <h4> | </h4>
-            <div class="welcome-text cursor-pointer" routerLink="/planets">
+            <div class="welcome-text cursor-pointer left-padding" routerLink="/planets">
               <h5>Planeten entdecken
                 <mdb-icon fas icon="chevron-right"></mdb-icon>
               </h5>
