--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -26,7 +26,7 @@
 }
 
 .welcome-text {
-  color: rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
 }
 
@@ -65,6 +65,14 @@ div:hover > .glow {
   0 0 200px #ffd633;
 }
 
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
+}
+
+.left-padding {
+  padding-left: 1rem;
+}
+
+.right-padding {
+  padding-right: 1rem;
 }
