--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ html, body {
 .btn-circle {
   width: 30px;
   height: 30px;
-  padding: 6px 0px;
+  padding: 6px 0;
   border-radius: 15px;
   text-align: center;
   font-size: 12px;
